assets/css/style.css
html {
	height: 100%;
}

body{
	margin: 0;
	padding: 0;
	background-color: #ededed;
}

.main-header{
	padding: 0;
	margin-right: 0px;
}

.navbar-collapse{
	background-color: #343a40;
}

.name{
	font-weight: bold;
	font-family: 'Georgia', Times, Times New Roman, serif;
	font-size: 24px;
	background-color: #4aaaa5;
	margin-left: 200px;
	height: 50px;
	padding-left: 5px;
    padding-right: 5px;
}	

a:link {
    text-decoration: none;
    color: #fff;
}

a:visited {
    text-decoration: none;
    color: #fff;
}

.profilePic {
	margin-right: 10px;
}

hr.style1{
	border-top: 1px solid #cccccc;
	width:95%; 
}
.body-header, .connect-header {
	margin-top:10px;
	font-size: 24px;
	color: #4aaaa5;
	font-weight: bold;
	font-family: 'Georgia', Times, Times New Roman, serif;
	padding-left: 20px;
}

.footer{
	background-color: #343a40;
	color: #fff; 
	text-align: center;
	padding-top: 15px;
	padding-left: 43%;
	height: 50px;
	margin-top: 10px;
}

.placeholder-text{
	position: relative;
    bottom: 50px;
    background-color: #4AAAA5;
    text-align: center;
    padding-top: 10px;
    color: #E9F1E9;
    font-family: 'Georgia', Times, Times New Roman, serif;

}

.connect-with-me{
	margin-bottom: 100px;
}

